--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,9 +6,9 @@
         <item name="android:colorAccent">@color/accent</item>
     </style>
 
-    <color name="primary">#259b24</color>
-    <color name="primary_dark">#0a7e07</color>
-    <color name="accent">#ff000000</color>
+    <color name="primary">#1a1a1a</color>
+    <color name="primary_dark">#000000</color>
+    <color name="accent">#97ba3c</color>
     <color name="text_color">#fefefe</color>
 
 </resources>
