--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/accent"
+        android:textColor="#FFF"
+        android:text="Buscar"
+        android:id="@+id/button"
+        android:layout_above="@+id/imageButton"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
