--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <ImageButton
+    <!--<ImageButton
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:src="@drawable/ic_magnify"
@@ -23,7 +23,7 @@
         android:id="@+id/imageButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="50dp" />-->
 
     <Button
         android:layout_width="wrap_content"
@@ -32,7 +32,16 @@
         android:textColor="#FFF"
         android:text="Buscar"
         android:id="@+id/button"
-        android:layout_above="@+id/imageButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="79dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:hint="@string/placeholder_buscador"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
 
