--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,78 +1,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/primary_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_dark"
-    tools:context=".MainActivity">
-
-    <!--
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/escuchando"
-        android:id="@+id/imageView"
-        android:scaleType="centerCrop"
-
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-    -->
-    <!--<ImageButton
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:src="@drawable/ic_magnify"
-        android:background="@drawable/ripple"
-        android:id="@+id/imageButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />-->
-    <!--
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/accent"
-        android:textColor="#FFF"
-        android:text="Buscar"
-        android:id="@+id/button"
-        android:onClick="buscar"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="79dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:hint="@string/placeholder_buscador"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />-->
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
     <TextView
         android:textColor="#FEFEFE"
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-
-        android:layout_marginTop="8dp"
-        android:text="Introduzca el nombre del artista:" />
+        android:text="Introduzca el nombre del artista:"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <EditText
+        android:textColor="#FFF"
         android:id="@+id/buscarArtista"
-        android:textColor="#FEFEFE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignParentRight="true"
+        android:ems="10"
         android:layout_below="@+id/textView1"
-        android:ems="10" >
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/listView">
 
         <requestFocus />
     </EditText>
@@ -88,16 +42,19 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
+        android:textColor="#FEFEFE"
         android:id="@+id/nombreArtista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buscar"
-        android:layout_below="@+id/buscar"
-        android:layout_marginTop="24dp"
+
+
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/buscar"
+        android:layout_alignParentStart="true" />
 
     <TextView
+        android:textColor="#FFF"
         android:id="@+id/descripcionArtista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -105,5 +62,20 @@
         android:layout_below="@+id/nombreArtista"
         android:text="" />
 
+    <TextView
+        android:id="@+id/numeroAlbumes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/descripcionArtista"
+        android:layout_below="@+id/descripcionArtista"
+        android:text="" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/numeroAlbumes"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
